# Launchpad

./: CMakeLists.txt  README.md  main
CMake/: FindLibreSSL.cmake
src/: BlurView.mm  header.h  main.cpp
